tests/invalid/circular_dependency/main.py
import a
import b

print(a.a_func())
print(b.b_func())